--- a/overlay.html
+++ b/overlay.html
@@ -34,7 +34,7 @@
   </head>
   <body class="antialiased">
     <div id="root" class="w-[var(--overlay-width)] font-inter">
-      <div class="flex items-center justify-between w-full gap-1">
+      <div class="flex items-center justify-start gap-10"
         <!-- Left: rank + username (white with black outline) -->
         <div class="font-extrabold text-white text_black_outline_lg text-base md:text-xl tracking-wide">
           <span id="rank">#--</span>
