--- a/overlay.html
+++ b/overlay.html
@@ -5,55 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CX Hunt Overlay</title>
 
-    <style>
-      :root {
-        --accent: #4fff00;      /* Kick green */
-        --overlay-width: 730px; /* tweak via ?w= */
-      }
-      html, body { background: transparent; }
-      /* Black outline effect for readability on any background */
-      .text_black_outline_lg {
-        text-shadow:
-          2px 0 #000,
-          -2px 0 #000,
-          0 2px #000,
-          0 -2px #000,
-          1.5px 1.5px 0 #000,
-          -1.5px 1.5px 0 #000,
-          1.5px -1.5px 0 #000,
-          -1.5px -1.5px 0 #000;
-      }
-    </style>
-    
-    <!-- Minimal CSS utilities to avoid Tailwind CDN in production -->
-    <style>
-      .antialiased { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-      .fixed { position: fixed; }
-      .right-3 { right: .75rem; }
-      .bottom-3 { bottom: .75rem; }
-      .w-fit { width: -moz-fit-content; width: fit-content; }
-      .flex { display: flex; }
-      .items-center { align-items: center; }
-      .justify-start { justify-content: flex-start; }
-      .gap-2 { gap: .5rem; }
-      .font-extrabold { font-weight: 800; }
-      .text-white { color: #fff; }
-      .text-right { text-align: right; }
-      .text-base { font-size: 1rem; line-height: 1.5; }
-      .text-sm { font-size: .875rem; line-height: 1.25rem; }
-      .tracking-wide { letter-spacing: .05em; }
-      .leading-\[22px\] { line-height: 22px; }
-      .text-accent { color: var(--accent); }
-      @media (min-width: 768px) {
-        .md\:text-xl { font-size: 1.25rem; line-height: 1.75rem; }
-        .md\:text-base { font-size: 1rem; line-height: 1.5; }
-      }
-    </style>
+    <link rel="stylesheet" href="/styles.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;800;900&display=swap" rel="stylesheet" />
-    <style>
-      .font-inter { font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
-    </style>
   </head>
   <body class="antialiased">
     <!-- Anchored bottom-right, hugging content -->
@@ -66,8 +20,8 @@
         </div>
         <!-- Right: stats (green with black outline) -->
         <div class="text-right leading-[22px]">
-          <p class="font-extrabold text_black_outline_lg text-accent text-sm md:text-base"><span id="rfids">0</span> RFIDs</p>
-          <p class="font-extrabold text_black_outline_lg text-accent text-sm md:text-base"><span id="points">0</span> points</p>
+          <p class="font-extrabold text_black_outline_lg text-[color:var(--accent)] text-sm md:text-base"><span id="rfids">0</span> RFIDs</p>
+          <p class="font-extrabold text_black_outline_lg text-[color:var(--accent)] text-sm md:text-base"><span id="points">0</span> points</p>
         </div>
       </div>
     </div>
